Use `overflow: auto` instead of `overflow: scroll` to avoid showing the scroll bar on Android if there is nothing to scroll

--- a/src/components/list-view/list-view.scss
+++ b/src/components/list-view/list-view.scss
@@ -5,7 +5,7 @@
 
 :host {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
     font-size: 0;
     padding-bottom: 5px;
