--- a/src/components/record-view/record-view.scss
+++ b/src/components/record-view/record-view.scss
@@ -6,7 +6,7 @@
 :host {
     display: block;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
